feat: implement tiptap-based wysiwyg markdown editor (untested checkpoint)
Added TipTap framework integration for WYSIWYG markdown editing in JupyterLab:
- TipTap wrapper with markdown serialization support
- JupyterLab DocumentWidget integration with sharedModel API
- Theme-aware styling using JupyterLab CSS variables
- Widget factory for .md file type registration
- Framework analysis documentation

Dependencies added: @tiptap/core, @tiptap/starter-kit, @tiptap/pm, prosemirror-markdown

Note: This is an untested checkpoint commit for development continuity.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jupyterlab_md_wysiwyg_editor_extension",
-    "version": "0.1.0",
+    "version": "0.1.2",
     "description": "Jupyterlab extension to allow WYSIWYG (What You See Is What You Get) markdown editor",
     "keywords": [
         "jupyter",
@@ -58,7 +58,11 @@
     "dependencies": {
         "@jupyterlab/application": "^4.0.0",
         "@jupyterlab/coreutils": "^6.0.0",
-        "@jupyterlab/services": "^7.0.0"
+        "@jupyterlab/services": "^7.0.0",
+        "@tiptap/core": "^3.7.2",
+        "@tiptap/pm": "^3.7.2",
+        "@tiptap/starter-kit": "^3.7.2",
+        "prosemirror-markdown": "^1.13.2"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
