feat: implement toast ui editor with lessons learned from tiptap (untested)
Reimplemented WYSIWYG markdown editor using TOAST UI Editor after TipTap
integration failed due to incompatibility with Lumino's layout constraints.

Changes:
- Replaced TipTap with @toast-ui/editor v3.2.2
- Created ToastEditorWrapper (87 lines) with WYSIWYG-only mode
- Simplified MarkdownEditorWidget (319→184 lines, removed custom toolbar)
- Minimized CSS (editor.css 271→172 lines, base.css 22→18 lines)
- No CSS containment overrides (let TOAST UI manage scrolling)
- Added skipLibCheck to tsconfig.json for TOAST UI type issues
- Added ProseMirror peer dependencies

Documentation:
- Created LESSONS-LEARNED.md (comprehensive TipTap failure analysis)
- Created README-TIPTAP-BACKUP.md (restoration guide)
- Created backup-tiptap.zip (complete TipTap implementation archive)

Key improvements over TipTap approach:
- Integrated framework instead of headless (manages own layout/scrolling)
- Single container vs two-level structure
- Minimal CSS intervention vs aggressive overrides
- Works within Lumino constraints vs fighting them

Bundle: 1.86 MiB (TOAST UI 935KB + CSS 444KB + ProseMirror ~530KB)
Version: 0.1.17
Status: Builds successfully, untested in JupyterLab

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jupyterlab_md_wysiwyg_editor_extension",
-    "version": "0.1.2",
+    "version": "0.1.17",
     "description": "Jupyterlab extension to allow WYSIWYG (What You See Is What You Get) markdown editor",
     "keywords": [
         "jupyter",
@@ -59,10 +59,11 @@
         "@jupyterlab/application": "^4.0.0",
         "@jupyterlab/coreutils": "^6.0.0",
         "@jupyterlab/services": "^7.0.0",
-        "@tiptap/core": "^3.7.2",
-        "@tiptap/pm": "^3.7.2",
-        "@tiptap/starter-kit": "^3.7.2",
-        "prosemirror-markdown": "^1.13.2"
+        "@toast-ui/editor": "^3.2.2",
+        "prosemirror-commands": "^1.7.1",
+        "prosemirror-model": "^1.25.3",
+        "prosemirror-state": "^1.4.3",
+        "prosemirror-view": "^1.41.3"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
